fullSandbox11072023/force-app/main/default/objects/Product_Request__c/Product_Request__c.object-meta.xml
<CustomObject>
    <description>Product Request object used for listing products that will appear in the Product Request Form.</description>
    <label>Product Request</label>
    <nameField>
        <displayFormat>PRQ-{000000}</displayFormat>
        <label>Product Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>