fullSandbox11072023/force-app/main/default/objects/Product_Request__c/fields/Current_Contract_Price_or_last__c.field-meta.xml
<CustomField>
    <fullName>Current_Contract_Price_or_last__c</fullName>
    <description>Current or last contract price for this product.</description>
    <inlineHelpText>What is the current or the last available contract price for this product?</inlineHelpText>
    <label>Current Contract Price (or last)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>