fullSandbox11072023/force-app/main/default/objects/Product_Request__c/fields/Current_SU_Volume__c.field-meta.xml
<CustomField>
    <fullName>Current_SU_Volume__c</fullName>
    <description>Current Sales Unit Volume.</description>
    <inlineHelpText>What is the current sales unit volume for this product?</inlineHelpText>
    <label>Current SU Volume</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>