fullSandbox11072023/force-app/main/default/objects/Product_Request__c/fields/Local_Market_Price__c.field-meta.xml
<CustomField>
    <fullName>Local_Market_Price__c</fullName>
    <description>Local market price of this product in USD.</description>
    <inlineHelpText>What is the local market price in USD?</inlineHelpText>
    <label>Local Market Price</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>