fullSandbox11072023/force-app/main/default/objects/Product_Request__c/fields/Pricing_Request__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Request__c</fullName>
    <description>Pricing Request for a formal quote.</description>
    <inlineHelpText>What is the pricing request you would like to make?</inlineHelpText>
    <label>Pricing Request</label>
    <referenceTo>Pricing_Request__c</referenceTo>
    <relationshipLabel>Product Requests</relationshipLabel>
    <relationshipName>Product_Requests</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>