fullSandbox11072023/force-app/main/default/objects/Product_Request__c/fields/Products__c.field-meta.xml
<CustomField>
    <fullName>Products__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Products that are being requested for this Pricing Request.</description>
    <inlineHelpText>What products are being requested?</inlineHelpText>
    <label>Product Code</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Product Requests</relationshipLabel>
    <relationshipName>Product_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>