fullSandbox11072023/force-app/main/default/objects/Product_Request__c/fields/Requested_Price_per_SU__c.field-meta.xml
<CustomField>
    <fullName>Requested_Price_per_SU__c</fullName>
    <description>Requested price per sales unit.</description>
    <inlineHelpText>What is the requested price per sales unit?</inlineHelpText>
    <label>Requested Price per SU</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>