fullSandbox11072023/force-app/main/default/objects/Product_Request__c/fields/Requested_Volume_SU__c.field-meta.xml
<CustomField>
    <fullName>Requested_Volume_SU__c</fullName>
    <description>Requested sales unit volume for the this product.</description>
    <inlineHelpText>What is the requested sales unit volume for this product?</inlineHelpText>
    <label>Requested Volume (SU)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>