fullSandbox11072023/force-app/main/default/objects/Product_Request__c/fields/Revised_Annual_Est_QTY_SU__c.field-meta.xml
<CustomField>
    <fullName>Revised_Annual_Est_QTY_SU__c</fullName>
    <description>Revised annual estimated quantity per sales unit for this product.</description>
    <inlineHelpText>What is the revised annual estimated quantity per sales unit for this product?</inlineHelpText>
    <label>Revised Annual Est. QTY (SU)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>