fullSandbox11072023/force-app/main/default/objects/Product_Request__c/fields/Revised_Price_Per_SU__c.field-meta.xml
<CustomField>
    <fullName>Revised_Price_Per_SU__c</fullName>
    <description>Revised per sales unit price for this product.</description>
    <inlineHelpText>What is the revised per sales unit price for this product?</inlineHelpText>
    <label>Revised Price Per SU</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>