fullSandbox11072023/force-app/main/default/objects/Product_Request__c/fields/Revised_Revenue_Potential__c.field-meta.xml
<CustomField>
    <fullName>Revised_Revenue_Potential__c</fullName>
    <formula>Requested_Volume_SU__c  *  Revised_Price_Per_SU__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revised Revenue Potential</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>